--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/LogoCaptain.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/Marvel_Logo.svg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marvel</title>
   </head>
